# legislation-discord-bot

./: .gitignore  Dockerfile  README.md  bill-database.json  build  config.json  docker-compose.yml  fix-db.py  meeting-database.json  pyproject.toml
legislation_discord_bot/: bills.py  main.py
